--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
       </div>
       <!-- Gallery -->
-      <div class="py-5 pi-draggable" draggable="true" id="Gallery">
+      <div class="py-5 pi-draggable" id="Gallery">
         <div class="container">
           <div class="row">
             <div class="text-center mx-auto col-lg-8 col-10">
@@ -338,8 +338,15 @@
       </footer>
       <!-- JavaScript dependencies -->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" style=""></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous" style=""></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous" style=""></script>
+      <!-- Script: Smooth scrolling between anchors in the same page -->
+      <script src="js/smooth-scroll.js" style=""></script>
+      <b>
+      </b>
     </div>
   </div>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
